--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -530,7 +530,7 @@
 
         <service
             android:name="com.topface.topface.utils.gcmutils.RegistrationService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <!--Приведенная ниже херь, есть результат внедрения appodeal, и при удалении этой рекломной сети-->
         <!--все это нужно выпилить, быстро, решительно!-->
