--- a/build.gradle
+++ b/build.gradle
@@ -362,6 +362,7 @@ dependencies {
     // Offerwalls
     compile 'com.supersonic.sdk:mediationsdk:6.4.7@jar'
 
+    // Retrofit
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
